--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     }
 
     * { margin:0; padding:0; box-sizing:border-box; }
-    html { scroll-behavior:smooth; scroll-padding-top:100px; }
+    html { scroll-behavior:smooth; scroll-padding-top:110px; }
     body {
       font-family:'Inter',system-ui,-apple-system,Segoe UI,sans-serif;
       color:var(--text-main);
@@ -79,78 +79,203 @@
     }
     .container{ max-width:1280px; margin:0 auto; padding:0 2rem; }
 
-    /* HEADER */
+    /* =========================
+       HEADER / MENÚ (MEJORADO)
+       ========================= */
     header{
       position:fixed; top:0; left:0; right:0; z-index:1000;
-      background:rgba(255,255,255,.98);
-      backdrop-filter:blur(10px);
-      border-bottom:1px solid rgba(229,231,235,.8);
-      padding:1.2rem 0;
-      transition:all .3s ease;
+      background:rgba(255,255,255,.92);
+      backdrop-filter:blur(14px);
+      border-bottom:1px solid rgba(229,231,235,.85);
+      padding:1.05rem 0;
+      transition:all .25s ease;
       box-shadow:var(--shadow-sm);
     }
-    header.scrolled{ padding:.8rem 0; box-shadow:var(--shadow-md); }
-    .navbar{ display:flex; align-items:center; justify-content:space-between; }
+    header.scrolled{
+      padding:.75rem 0;
+      background:rgba(255,255,255,.96);
+      box-shadow:var(--shadow-md);
+    }
 
-    .logo{ display:flex; align-items:center; gap:1rem; text-decoration:none; }
+    .navbar{
+      display:flex;
+      align-items:center;
+      gap:1rem;
+      min-height:64px;
+    }
+
+    /* Left: Logo */
+    .brand{
+      display:flex;
+      align-items:center;
+      gap:1rem;
+      text-decoration:none;
+      flex:0 0 auto;
+    }
+
+    /* ✅ LOGO MÁS GRANDE */
     .logo-icon{
-      width:48px; height:48px;
-      background:linear-gradient(135deg,var(--primary) 0%,var(--primary-dark) 100%);
-      border-radius:var(--radius-md);
-      display:flex; align-items:center; justify-content:center;
-      color:#fff; font-family:'Playfair Display',serif;
-      font-weight:700; font-size:1.8rem;
+      width:150px; /* <-- aquí tamaño de logo */
+      height:auto;
+      display:flex;
+      align-items:center;
+      justify-content:flex-start;
+      background:transparent;
+      border:none;
+      box-shadow:none;
+      border-radius:0;
+      overflow:visible;
+      flex-shrink:0;
     }
-    .logo-text{ display:flex; flex-direction:column; }
-    .logo-text-main{ font-family:'Playfair Display',serif; font-weight:700; font-size:1.6rem; color:var(--secondary); letter-spacing:-.5px; }
-    .logo-text-sub{ font-size:.75rem; color:var(--text-light); font-weight:500; letter-spacing:1px; text-transform:uppercase; margin-top:-2px; }
+    .logo-icon img{
+      width:150px; /* <-- aquí tamaño de logo */
+      height:auto;
+      object-fit:contain;
+      display:block;
+    }
 
-    .nav-links{ display:flex; align-items:center; gap:2.5rem; }
+    /* (Opcional) Textos del logo, los dejamos ocultos porque tú los tienes vacíos */
+    .logo-text{ display:none; }
+
+    /* Center: Links */
+    .nav-center{
+      flex:1 1 auto;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+    }
+
+    .nav-links{
+      display:flex;
+      align-items:center;
+      gap:.35rem;
+      padding:.35rem;
+      border-radius:999px;
+      background:rgba(243,244,246,.65);
+      border:1px solid rgba(229,231,235,.85);
+    }
+
     .nav-link{
-      font-weight:600; color:var(--neutral); text-decoration:none; font-size:.95rem;
-      transition:all .3s ease; position:relative; padding:.5rem 0;
+      font-weight:700;
+      color:var(--neutral);
+      text-decoration:none;
+      font-size:.95rem;
+      padding:.7rem 1.05rem;
+      border-radius:999px;
+      transition:all .2s ease;
+      position:relative;
+      white-space:nowrap;
     }
-    .nav-link:hover{ color:var(--primary); }
+    .nav-link:hover{
+      background:#fff;
+      color:var(--primary-dark);
+      box-shadow:0 6px 18px rgba(17,24,39,.08);
+    }
+    /* Underline elegante al hover/focus (sin mover layout) */
     .nav-link::after{
-      content:''; position:absolute; bottom:0; left:0; width:0; height:2px;
+      content:'';
+      position:absolute;
+      left:16px; right:16px;
+      bottom:8px;
+      height:2px;
+      border-radius:999px;
       background:linear-gradient(to right,var(--primary),var(--primary-dark));
-      transition:width .3s ease;
+      transform:scaleX(0);
+      transform-origin:left;
+      transition:transform .2s ease;
+      opacity:.9;
+      pointer-events:none;
     }
-    .nav-link:hover::after{ width:100%; }
+    .nav-link:hover::after,
+    .nav-link:focus-visible::after{
+      transform:scaleX(1);
+    }
+
+    /* Right: CTA */
+    .nav-right{
+      flex:0 0 auto;
+      display:flex;
+      align-items:center;
+      gap:.75rem;
+    }
 
     .btn{
       display:inline-flex; align-items:center; justify-content:center;
-      padding:.9rem 2.2rem; border-radius:var(--radius-md);
-      font-weight:600; font-size:.95rem; text-decoration:none;
-      transition:all .3s ease; border:none; cursor:pointer; gap:.5rem; white-space:nowrap;
+      padding:.9rem 2.2rem; border-radius:var(--radius-xl);
+      font-weight:800; font-size:.95rem; text-decoration:none;
+      transition:all .25s ease; border:none; cursor:pointer; gap:.55rem; white-space:nowrap;
     }
     .btn-primary{
       background:linear-gradient(135deg,var(--primary) 0%,var(--primary-dark) 100%);
-      color:#fff; box-shadow:0 4px 15px rgba(154,106,255,.20);
+      color:#fff;
+      box-shadow:0 12px 26px rgba(124,58,237,.22);
+      border:1px solid rgba(124,58,237,.15);
     }
-    .btn-primary:hover{ transform:translateY(-2px); box-shadow:0 6px 20px rgba(154,106,255,.30); }
+    .btn-primary:hover{
+      transform:translateY(-2px);
+      box-shadow:0 16px 34px rgba(124,58,237,.28);
+    }
     .btn-outline{
-      background:transparent; color:var(--primary); border:2px solid var(--primary);
+      background:#fff;
+      color:var(--primary-dark);
+      border:1px solid rgba(154,106,255,.35);
+      box-shadow:0 10px 20px rgba(17,24,39,.06);
     }
-    .btn-outline:hover{ background:var(--primary-light); transform:translateY(-2px); }
+    .btn-outline:hover{
+      transform:translateY(-2px);
+      background:var(--primary-light);
+    }
 
     /* MOBILE */
-    .mobile-menu-btn{ display:none; flex-direction:column; gap:4px; background:none; border:none; cursor:pointer; padding:.5rem; }
-    .mobile-menu-btn span{ width:24px; height:2px; background:var(--neutral-dark); transition:all .3s ease; }
-    .mobile-menu{
-      display:none; position:fixed; top:80px; left:0; right:0;
-      background:#fff; padding:2rem; box-shadow:var(--shadow-lg);
-      z-index:999; border-top:1px solid var(--neutral-border);
+    .mobile-menu-btn{
+      display:none;
+      flex-direction:column;
+      gap:5px;
+      background:#fff;
+      border:1px solid rgba(229,231,235,.95);
+      box-shadow:0 10px 18px rgba(17,24,39,.06);
+      cursor:pointer;
+      padding:.65rem .75rem;
+      border-radius:14px;
     }
+    .mobile-menu-btn span{
+      width:22px; height:2px; background:var(--neutral-dark);
+      transition:all .3s ease;
+    }
+
+    .mobile-menu{
+      display:none;
+      position:fixed;
+      top:86px; left:0; right:0;
+      background:rgba(255,255,255,.98);
+      backdrop-filter:blur(12px);
+      padding:1.25rem 0 1.75rem;
+      box-shadow:var(--shadow-lg);
+      z-index:999;
+      border-top:1px solid var(--neutral-border);
+    }
+    header.scrolled + .mobile-menu{ top:76px; }
     .mobile-menu.active{ display:block; }
-    .mobile-nav-links{ display:flex; flex-direction:column; gap:1.5rem; }
+    .mobile-nav-links{
+      display:flex;
+      flex-direction:column;
+      gap:.65rem;
+      padding:0 2rem;
+    }
     .mobile-nav-link{
-      font-weight:600; color:var(--neutral); text-decoration:none; font-size:1.1rem;
-      padding:.75rem 0; border-bottom:1px solid var(--neutral-border);
+      font-weight:800;
+      color:var(--neutral);
+      text-decoration:none;
+      font-size:1.05rem;
+      padding:1rem 1rem;
+      border:1px solid rgba(229,231,235,.85);
+      border-radius:16px;
+      background:#fff;
       display:flex; align-items:center; gap:.75rem;
+      box-shadow:0 10px 18px rgba(17,24,39,.06);
     }
     .mobile-nav-link i{ color:var(--primary); }
-    .mobile-nav-link:hover{ color:var(--primary); }
+    .mobile-nav-link:hover{ color:var(--primary-dark); background:var(--primary-light); }
 
     /* SECTIONS */
     .section{ padding:8rem 0 6rem; }
@@ -387,25 +512,24 @@
       .hero-title{ font-size:3rem; }
       .section-title{ font-size:2.8rem; }
       .blog-grid{ grid-template-columns:1fr; }
+      .nav-links{ gap:.2rem; }
+      .nav-link{ padding:.65rem .95rem; }
     }
-    @media (max-width:768px){
-      .nav-links{ display:none; }
-      .mobile-menu-btn{ display:flex; }
-      .hero{ padding-top:10rem; padding-bottom:5rem; }
-      .hero-title{ font-size:2.5rem; }
-      .section{ padding:6rem 0 4rem; }
-      .cta-section{ padding:3rem 2rem; }
-      .form-section{ padding:2.5rem; }
-      .pricing-display{ flex-direction:column; gap:2rem; }
-      .footer-content{ grid-template-columns:repeat(2,1fr); }
+    @media (max-width:860px){
+      .nav-center{ display:none; }
+      .nav-right{ display:none; }
+      .mobile-menu-btn{ display:flex; margin-left:auto; }
+      .logo-icon, .logo-icon img{ width:140px; }
+      .hero{ padding-top:10.5rem; }
     }
     @media (max-width:576px){
-      .container{ padding:0 1.5rem; }
+      .container{ padding:0 1.25rem; }
       .hero-title{ font-size:2.2rem; }
       .section-title{ font-size:2.2rem; }
-      .btn{ padding:.8rem 1.5rem; font-size:.9rem; }
+      .btn{ padding:.85rem 1.5rem; font-size:.92rem; }
       .hero-features{ grid-template-columns:1fr; }
       .footer-content{ grid-template-columns:1fr; }
+      .logo-icon, .logo-icon img{ width:125px; }
     }
   </style>
 </head>
@@ -414,50 +538,56 @@
   <!-- HEADER -->
   <header>
     <div class="container">
-      <nav class="navbar">
-        <a href="#inicio" class="logo">
-          <div class="logo-icon">J</div>
-          <div class="logo-text">
-            <div class="logo-text-main">Júristam</div>
-            <div class="logo-text-sub">Asesoría Legal Estratégica</div>
+      <nav class="navbar" aria-label="Menú principal">
+        <!-- LEFT: LOGO -->
+        <a href="#inicio" class="brand" aria-label="Ir a inicio">
+          <div class="logo-icon">
+            <img
+              src="https://i.postimg.cc/vHygbHxz/oie-transparent-(2).png"
+              alt="Logo Júristam"
+              onerror="this.style.display='none';"
+            />
           </div>
         </a>
 
-        <div class="nav-links">
-          <a href="#proceso" class="nav-link">Proceso</a>
-          <a href="#servicios" class="nav-link">Servicios</a>
+        <!-- CENTER: LINKS -->
+        <div class="nav-center">
+          <div class="nav-links">
+            <a href="#proceso" class="nav-link">Proceso</a>
+            <a href="#servicios" class="nav-link">Servicios</a>
+            <a href="/casos-de-exito.html" class="nav-link" target="_blank" rel="noopener">Casos de Éxito</a>
+            <a href="/blog/" class="nav-link">Guías</a>
+            <a href="#contacto" class="nav-link">Contacto</a>
+          </div>
+        </div>
 
-          <!-- ✅ NUEVO: Casos de Éxito (abre en nueva pestaña) -->
-          <a href="/casos-de-exito.html" class="nav-link" target="_blank" rel="noopener">
-            Casos de Éxito
-          </a>
-
-          <a href="/blog/" class="nav-link">Guías</a>
-          <a href="#contacto" class="nav-link">Contacto</a>
+        <!-- RIGHT: CTA -->
+        <div class="nav-right">
           <a href="#formulario" class="btn btn-primary">Evaluar Caso</a>
         </div>
 
+        <!-- MOBILE BUTTON -->
         <button class="mobile-menu-btn" id="mobileMenuBtn" aria-label="Abrir menú">
           <span></span><span></span><span></span>
         </button>
       </nav>
     </div>
 
+    <!-- MOBILE MENU -->
     <div class="mobile-menu" id="mobileMenu">
       <div class="container">
         <div class="mobile-nav-links">
           <a href="#inicio" class="mobile-nav-link"><i class="fas fa-home"></i>Inicio</a>
           <a href="#proceso" class="mobile-nav-link"><i class="fas fa-cogs"></i>Proceso</a>
           <a href="#servicios" class="mobile-nav-link"><i class="fas fa-gavel"></i>Servicios</a>
-
-          <!-- ✅ NUEVO: Casos de Éxito (abre en nueva pestaña) -->
           <a href="/casos-de-exito.html" class="mobile-nav-link" target="_blank" rel="noopener">
             <i class="fas fa-trophy"></i>Casos de Éxito
           </a>
-
           <a href="/blog/" class="mobile-nav-link"><i class="fas fa-book"></i>Guías</a>
           <a href="#contacto" class="mobile-nav-link"><i class="fas fa-envelope"></i>Contacto</a>
-          <a href="#formulario" class="btn btn-primary" style="margin-top:1.5rem;"><i class="fas fa-clipboard-check"></i>Evaluar Caso</a>
+          <a href="#formulario" class="btn btn-primary" style="width:100%; margin-top:.5rem; padding:1rem 1.25rem;">
+            <i class="fas fa-clipboard-check"></i>Evaluar Caso
+          </a>
         </div>
       </div>
     </div>
@@ -792,10 +922,7 @@
             <li><a href="#inicio">Inicio</a></li>
             <li><a href="#proceso">Proceso</a></li>
             <li><a href="#servicios">Servicios</a></li>
-
-            <!-- ✅ NUEVO -->
             <li><a href="/casos-de-exito.html" target="_blank" rel="noopener">Casos de Éxito</a></li>
-
             <li><a href="/blog/">Guías</a></li>
             <li><a href="#formulario">Evaluación</a></li>
           </ul>
@@ -842,7 +969,11 @@
     // Menú móvil
     const mobileMenuBtn = document.getElementById('mobileMenuBtn');
     const mobileMenu = document.getElementById('mobileMenu');
-    mobileMenuBtn.addEventListener('click', () => mobileMenu.classList.toggle('active'));
+
+    mobileMenuBtn.addEventListener('click', () => {
+      mobileMenu.classList.toggle('active');
+    });
+
     document.querySelectorAll('.mobile-nav-link').forEach(link => {
       link.addEventListener('click', () => mobileMenu.classList.remove('active'));
     });
@@ -856,7 +987,7 @@
         if (!el) return;
         e.preventDefault();
         mobileMenu.classList.remove('active');
-        window.scrollTo({ top: el.offsetTop - 100, behavior: 'smooth' });
+        window.scrollTo({ top: el.offsetTop - 110, behavior: 'smooth' });
       });
     });
 
@@ -884,6 +1015,7 @@
         url: "/blog/cuenta-bloqueada-coactiva-salario.html"
       }
     ];
+
     document.getElementById("blogGrid").innerHTML = posts.map(p => `
       <article class="blog-card">
         <div class="blog-meta">
@@ -898,7 +1030,7 @@
       </article>
     `).join("");
 
-    // FormSubmit AJAX (✅)
+    // FormSubmit AJAX
     const form = document.getElementById('leadForm');
     const submitBtn = document.getElementById('submitBtn');
     const successMessage = document.getElementById('successMessage');
