Actualizar sitemap con blog y articulos

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Favicon Júristam -->
+<link rel="icon" type="image/png" href="https://i.postimg.cc/vHygbHxz/oie_transparent_(2).png">
+<link rel="apple-touch-icon" href="https://i.postimg.cc/vHygbHxz/oie_transparent_(2).png">
+<meta name="theme-color" content="#9a6aff">
+
 
   <title>Júristam · Abogados en Ecuador · Asesoría Legal Estratégica</title>
   <meta name="description" content="Filtramos casos reales, revisamos documentos y diseñamos estrategia clara. Consulta virtual en Ecuador y presencial en Guayaquil." />
