Actualizar favicon y ajustes de header

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Favicon Júristam -->
 <link rel="icon" type="image/png" href="https://i.postimg.cc/nLJR5dFN/Diseno-sin-titulo-(6).png">
 <link rel="apple-touch-icon" href="https://i.postimg.cc/nLJR5dFN/Diseno-sin-titulo-(6).png">
-
+<meta name="theme-color" content="#9a6aff">
 
 
   <title>Júristam · Abogados en Ecuador · Asesoría Legal Estratégica</title>
