Fix sitemap: remove lastmod entirely

--- a/casos-de-exito.html
+++ b/casos-de-exito.html
@@ -15,6 +15,13 @@
   <meta property="og:title" content="Casos de Éxito · Júristam" />
   <meta property="og:description" content="Casos reales atendidos por Júristam en Ecuador. Resultados concretos en coactiva, SENAE/Aduanas, familia y más." />
   <meta property="og:url" content="https://juristam.net/casos-de-exito.html" />
+  <meta property="og:image" content="https://i.postimg.cc/vHygbHxz/oie-transparent-(2).png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Casos de Éxito · Júristam" />
+  <meta name="twitter:description" content="Casos reales atendidos por Júristam en Ecuador. Resultados concretos en coactiva, SENAE/Aduanas, familia y más." />
+  <meta name="twitter:image" content="https://i.postimg.cc/vHygbHxz/oie-transparent-(2).png" />
 
   <!-- Favicon Júristam -->
   <link rel="icon" type="image/png" href="https://i.postimg.cc/KjDB1NSM/Diseno-sin-titulo-(7).png">
