--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
   <meta property="og:title" content="Júristam · Abogados en Ecuador · Asesoría Legal Estratégica" />
   <meta property="og:description" content="Filtramos casos reales, revisamos documentos y diseñamos estrategia clara. Consulta virtual en Ecuador y presencial en Guayaquil." />
   <meta property="og:url" content="https://juristam.net/" />
+  <meta property="og:image" content="https://i.postimg.cc/vHygbHxz/oie-transparent-(2).png" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Júristam · Abogados en Ecuador" />
   <meta name="twitter:description" content="Estrategia legal, no opiniones. Consulta virtual y presencial en Guayaquil." />
+  <meta name="twitter:image" content="https://i.postimg.cc/vHygbHxz/oie-transparent-(2).png" />
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -43,7 +45,10 @@
     "email":"juristam.ec@gmail.com",
     "priceRange":"$45-$85",
     "openingHours":"Mo-Fr 09:00-18:00",
-    "sameAs":[]
+    "sameAs":[
+      "https://wa.me/593994859814",
+      "https://www.google.com/maps/search/?api=1&query=J%C3%BAristam%20Guayaquil%20Ecuador"
+    ]
   }
   </script>
 
