Fix sitemap: remove lastmod entirely

--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@
     "email":"juristam.ec@gmail.com",
     "priceRange":"$45-$85",
     "openingHours":"Mo-Fr 09:00-18:00",
-    "sameAs":[
-      "https://wa.me/593994859814",
-      "https://www.google.com/maps/search/?api=1&query=J%C3%BAristam%20Guayaquil%20Ecuador"
-    ]
+    "sameAs":[]
   }
   </script>
 
