--- a/casos-de-exito.html
+++ b/casos-de-exito.html
@@ -2,6 +2,10 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
+
+<link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="icon" type="image/png" href="https://i.postimg.cc/nLJR5dFN/Diseño_sin_título_(6).png">
+  <link rel="apple-touch-icon" href="https://i.postimg.cc/nLJR5dFN/Diseño_sin_título_(6).png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   
 
@@ -24,8 +28,8 @@
   <meta name="twitter:image" content="https://i.postimg.cc/vHygbHxz/oie-transparent-(2).png" />
 
   <!-- Favicon Júristam -->
-  <link rel="icon" type="image/png" sizes="48x48" href="/favicon.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="https://i.postimg.cc/KjDB1NSM/Diseno-sin-titulo-(7).png">
+  <link rel="apple-touch-icon" href="https://i.postimg.cc/KjDB1NSM/Diseno-sin-titulo-(7).png">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Playfair+Display:wght@600;700&display=swap" rel="stylesheet" />
