Fix sitemap: remove lastmod entirely

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
 
-<link rel="icon" href="/favicon.ico" sizes="any">
+<link rel="icon" href="/favicon.png" sizes="any">
 <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48x48.png">
 <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <meta name="theme-color" content="#9a6aff">
