--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
 
-<link rel="icon" href="/favicon.png" sizes="any">
-<link rel="icon" type="image/png" sizes="48x48" href="/favicon.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" href="/favicon.png" sizes="48x48">
+<link rel="apple-touch-icon" href="/favicon.png">
 <meta name="theme-color" content="#9a6aff">
 
 
