Descripción del cambio

--- a/index.html
+++ b/index.html
@@ -1134,8 +1134,8 @@
         width:200px; 
       }
       .logo-icon img {
-        max-height: none;
-        height: 140%; /* Restaurar valor original */
+        max-height: 92px;
+        height: 100%;
       }
 
       .nav-links{
