Descripción del cambio

--- a/index.html
+++ b/index.html
@@ -1133,12 +1133,12 @@
 
       .brand{ flex:0 0 auto; margin-right: 90px; }
       .logo-icon{ 
-        height:92px; 
+        height:100px; 
         width:200px; 
       }
       .logo-icon img {
-        max-height: none;
-        height: 140%; /* Restaurar valor original */
+        max-height: 100px;
+        height: auto%; /* Restaurar valor original */
       }
 
       .nav-links{
