Agrega categoría Societario y artículo inspección Superintendencia

--- a/index.html
+++ b/index.html
@@ -1463,7 +1463,7 @@
   <section class="section blog-section" id="blog">
     <div class="container">
       <div class="section-header">
-        <div class="section-kicker">Guías Júristam</div>
+        <div class="section-kicker">Guías Juristam</div>
         <h2 class="section-title">Artículos prácticos para actuar con claridad</h2>
         <p class="section-subtitle">Lectura rápida. Sin teoría innecesaria. Enfocado en "qué hacer".</p>
       </div>
@@ -1543,7 +1543,7 @@
     <div class="container">
       <div class="section-header">
         <div class="section-kicker">Evaluación</div>
-        <h2 class="section-title">Formulario de evaluación Júristam</h2>
+        <h2 class="section-title">Formulario de evaluación Juristam</h2>
         <p class="section-subtitle">Completa todos los campos marcados con *. Sin esto no podemos ofrecerte una agenda responsable.</p>
       </div>
 
@@ -1658,7 +1658,7 @@
           </div>
 
           <p style="text-align:center; margin-top:14px; color: var(--text-light); font-size: .85rem;">
-            Al enviar autorizas a Júristam a contactarte por WhatsApp o correo. Tus datos se manejan de forma confidencial.
+            Al enviar autorizas a Juristam a contactarte por WhatsApp o correo. Tus datos se manejan de forma confidencial.
           </p>
         </form>
 
@@ -1675,7 +1675,7 @@
     <div class="container">
       <div class="footer-content">
         <div>
-          <div class="footer-heading">Júristam</div>
+          <div class="footer-heading">Juristam</div>
           <p style="opacity:.75; line-height:1.6; font-size: .9rem;">Estrategia legal, claridad y acción.</p>
         </div>
 
@@ -1712,7 +1712,7 @@
         </div>
       </div>
 
-      <div class="footer-bottom">© <span id="currentYear"></span> Júristam. Todos los derechos reservados.</div>
+      <div class="footer-bottom">© <span id="currentYear"></span> Juristam. Todos los derechos reservados.</div>
     </div>
   </footer>
 
